# WebChat

Backend/: docker-compose.yml  main.py  pyproject.toml
Frontend/: .gitignore  package-lock.json  package.json
Frontend/src/: main.tsx
Frontend/src/assets/style/: global.css
Frontend/src/components/screens/Main/: MainPage.module.css  MainPage.scss  MainPage.tsx
Frontend/src/components/screens/Main/AskWindow/: AskWindow.module.css  AskWindow.tsx
Frontend/src/components/screens/Main/ChatWindow/: ChatWindow.module.css  ChatWindow.tsx
Frontend/src/components/ui/: Router.tsx
Frontend/src/models/: interfaces.tsx
